Potential fix for edit, log update for delete